fix(Navbar): Increase z-index for NavbarGuest and add NavbarAuth to Home component for improved layout

--- a/src/components/navbar/guest/NavbarGuest.module.css
+++ b/src/components/navbar/guest/NavbarGuest.module.css
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  z-index: 2;
+  z-index: 10;
   position: fixed;
   display: flex;
   flex-direction: row;
